kyverno/disallow-run-as-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-run-as-root
spec:
  validationFailureAction: Enforce
  rules:
    - name: autogen-check-run-as-non-root
      match:
        resources:
          kinds:
            - Pod
          namespaces:
            - '*'
      exclude:
        resources:
          namespaces:
            - monitoring
      validate:
        message: "Running as root is not allowed."
        pattern:
          spec:
            containers:
              - securityContext:
                  runAsNonRoot: true
